[metadata]
name = pyxgboost
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/pyxgboost
description = A tool for compiling XGBoost models into python source for using without xgboost
long_description = file: README.md
long_description_content_type = text/markdown
keywords = machine learning, decision tree, xgboost, gradient boosted tree, compiler
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science :: Data Science

[options]
zip_safe = True
packages = pyxgboost, pyxgboost.kaitai
include_package_data = True
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.py.git#egg=kaitaiStructCompile;
test_suite = tests.tests.Tests
install_requires =
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git#egg=plumbum
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct
	alternativez @ git+https://gitlab.com/KOLANICH/alternativez.py.git#egg=alternativez

[options.extras_require]
serializing AST (we need any of) = astor @ git+https://github.com/berkerpeksag/astor.git#egg=astor; codegen @ git+https://github.com/andreif/codegen.git#egg=codegen; astunparse @ git+https://github.com/simonpercivall/astunparse.git#egg=astunparse; astmonkey @ git+https://github.com/mutpy/astmonkey.git#egg=astmonkey;

[options.entry_points]
console_scripts = pyxgboost = pyxgboost.__main__:PyXGBoostCLI.run
distutils.setup_keywords = pyxgboost = pyxgboost.setuptoolsHelper:pyxgboostHelper

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/ kaitaiStructCompile/kaitaiStructCompile.py.git#egg=kaitaiStructCompile"]
